<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="server_host_title">Server Host</string>
    <string name="server_port_title">Server Port</string>
    <string name="user_name_title">Username</string>
    <string name="password_title">Password</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="email_title">Email</string>
    <string name="gender_title">Gender</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="log_in_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="server_host_value">10.0.2.2</string>
    <string name="server_port_value">8080</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_subtitle">This is my Fragment!</string>
    <string name="random_entry_label">Random Entry</string>
    <string name="clear_button_label">Clear Database</string>
    <string name="initial_event_info_text">Learn about your ancestor\'s lives!\nClick any marker to learn more.</string>
    <string name="menuSearch">Search</string>
    <string name="menuFilter">Filter</string>
    <string name="menuSettings">Settings</string>
    <string name="filter_title">Welcome to filter view!</string>
    <string name="settings_activity_title">Welcome to the settings activity</string>
    <string name="search_activity_title">Welcome to the search activity</string>
    <string name="event_activity_title">You\'re in the Event Activity</string>
    <string name="life_story_title">Life Story Lines</string>
    <string name="life_story_desc">Connect Birth/Marriage/Death</string>
    <string name="family_tree_desc">Connect family members</string>
    <string name="family_tree_title">Family Tree Lines</string>
    <string name="spouse_title">Spouse Lines</string>
    <string name="spouse_desc">Connect to Spouse</string>
    <string name="map_title">Map Type</string>
    <string name="map_desc">Choose map background</string>
    <string name="sync_title">Synchronize Data</string>
    <string name="sync_desc">Refresh Cache</string>
    <string name="sync_button">Sync</string>
    <string name="logout_title">Log Out</string>
    <string name="logout_desc">Return to Log In Screen</string>
    <string name="logout_button">Log Out</string>
    <string name="father_title">Father\'s Side Events</string>
    <string name="mother_title">Mother\'s Side Events</string>
    <string name="male_events_title">Male Events</string>
    <string name="female_events_title">Female Events</string>
    <string name="birth_events_title">Birth Events</string>
    <string name="marriage_events_title">Marriage Events</string>
    <string name="person_activity_fn_title">First Name</string>
    <string name="person_activity_fn_filler">John</string>
    <string name="person_activity_ln_filler">Doe</string>
    <string name="person_activity_ln_title">Last Name</string>
    <string name="person_activity_gender_filler">Male</string>
    <string name="person_activity_gender_title">Gender</string>
    <string name="group_title_family">Family</string>
    <string name="group_title_events">Life Events</string>
    <string name="search_hint">Search Here</string>
</resources>
